Feedback работает, все рахат